# vcglib

.github/workflows/: BuildExamples.yml
apps/: CMakeLists.txt
apps/openvdb/: CMakeLists.txt  OpenVDBRemeshing.cpp
wrap/WindingNumber/: SolidAngle.h  UT_Array.h  WindingNumber.h  parallel_for.h
wrap/openvdb/: OpenVDBAdapter.cpp  OpenVDBAdapter.h  WindingNumber.cpp
